--- a/CSS/main.less
+++ b/CSS/main.less
@@ -605,7 +605,7 @@ max-width: 950px;
 }
 
 /*** CM PAGE ***/
-
+/***
 .page-img {
 	background-color: #e4e4e4;
 }
@@ -628,7 +628,7 @@ margin-top: 50px;
 	margin-bottom: 40px;
 	padding-top: 40px;
 	border-top: solid 1px @border-bottom;
-}
+}***/
 
 .banner-img {
 	margin-top: -40px;
